manifests/seraphim/prod/gitlab/HTTPRoute-gitlab-minio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations: {}
  labels:
    app: minio
    chart: minio-0.4.3
    heritage: Helm
    release: gitlab
  name: gitlab-minio
  namespace: gitlab
spec:
  hostnames:
    - minio.example.com
  parentRefs:
    - name: gitlab-gw
      sectionName: minio-web
  rules:
    - backendRefs:
        - kind: Service
          name: gitlab-minio-svc
          port: 9000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
